fix: Increase padding to prevent log overlap

--- a/css/endpoints.css
+++ b/css/endpoints.css
@@ -9,7 +9,3 @@
 .parlay-endpoint-card-tab-content {
 	max-height: 300px;
 }
-
-.filter-input-container {
-	padding-bottom: 0;
-}
