--- a/vendor_components/promenade/css/StandardEndpointCardLog.css
+++ b/vendor_components/promenade/css/StandardEndpointCardLog.css
@@ -1,3 +1,11 @@
 .message-text {
 	overflow-wrap: break-word;
 }
+
+.filter-input-container {
+	padding-bottom: 0;
+}
+
+.parlay-log-item {
+	padding-bottom: 20px !important;	
+}
